--- a/website/pages/docs/plugins/sources/tailscale/overview.mdx
+++ b/website/pages/docs/plugins/sources/tailscale/overview.mdx
@@ -14,8 +14,8 @@ resources and loads it into any supported CloudQuery destination (e.g. PostgreSQ
 ## Authentication
 
 In order to fetch information from Tailscale, `cloudquery` needs to be authenticated.
-The suggested way is to use an [OAuth client](https://tailscale.com/kb/1215/oauth-clients/), the previous way of
-using An [API key](https://login.tailscale.com/admin/settings/keys) is also supported.
+The suggested way is to use an [OAuth client](https://tailscale.com/kb/1215/oauth-clients/). The previous way of
+using an [API key](https://login.tailscale.com/admin/settings/keys) is also supported.
 
 
 ## Spec
