--- a/website/pages/docs/plugins/sources/tailscale/overview.mdx
+++ b/website/pages/docs/plugins/sources/tailscale/overview.mdx
@@ -56,7 +56,7 @@ spec:
 
   # plugin specific configuration
   spec:
-    client_id:    "<YOUR_API_KEY_HERE>"
+    client_id:    "<YOUR_CLIENT_ID_HERE>"
     client_secret: ${CLIENT_SECRET_ENV_VARIABLE}
     tailnet:      "<YOUR_TAILNET>"
     endpoint_url: "<YOUR_BASE_URL>"
