--- a/website/pages/docs/plugins/sources/tailscale/overview.mdx
+++ b/website/pages/docs/plugins/sources/tailscale/overview.mdx
@@ -41,7 +41,7 @@ This is the (nested) spec used by the Tailscale source plugin.
 
 ## Example
 
-This example syncs from Tailscale to a Postgres destination, using `api_key` authentication.
+This example syncs from Tailscale to a Postgres destination, using OAuth authentication.
 The (top level) source spec section is described in the [Source Spec Reference](/docs/reference/source-spec).
 
 ```yaml copy
