--- a/website/pages/blog/cloudquery_tailscale.mdx
+++ b/website/pages/blog/cloudquery_tailscale.mdx
@@ -42,7 +42,7 @@ spec:
   version: "VERSION_SOURCE_TAILSCALE"
   tables: ["tailscale_devices"]
   destinations: ["postgresql"]
-  # Stripe specific configuration
+  # Tailscale specific configuration
   spec:
     client_id: "YOUR_CLIENT_ID"
     client_secret: "${TAILSCALE_CLIENT_SECRET}"
