--- a/website/pages/blog/cloudquery_tailscale.mdx
+++ b/website/pages/blog/cloudquery_tailscale.mdx
@@ -33,7 +33,7 @@ Let's look at a few useful queries
 
 First let's quickly look at the source configuration so the plugin can authenticate with the new OAuth Client
 
-```
+```yaml copy
 kind: source
 # Common source-plugin configuration
 spec:
