--- a/website/pages/blog/cloudquery_tailscale.mdx
+++ b/website/pages/blog/cloudquery_tailscale.mdx
@@ -15,8 +15,8 @@ import { BlogHeader } from "../../components/BlogHeader"
 
 Tailscale source plugin for CloudQuery is now officially maintained by Tailscale - Big thanks for the Tailscale team!.
 
-With the new Tailscale plugin you can now easily query Tailscale config and bring config data to your infrastructure/operational lake
-so you can have all your infrastructure data in one place and correlate between different services.
+With the new Tailscale plugin you can now easily query Tailscale config and bring config data to your infrastructure/operational lake. 
+This way you can have all your infrastructure data in one place and correlate between different services.
 
 
 As part of its initial release, the Tailscale plugin supports pulling data for the following APIs:
