--- a/website/pages/blog/cloudquery_tailscale.mdx
+++ b/website/pages/blog/cloudquery_tailscale.mdx
@@ -89,7 +89,7 @@ Learn about how Tailscale client are distributed in your org across devices
 select count(*), os from tailscale_devices group by os;
 ```
 
-```
+```text
  count |  os   
 -------+-------
    102 | macOS
