--- a/website/pages/blog/cloudquery_tailscale.mdx
+++ b/website/pages/blog/cloudquery_tailscale.mdx
@@ -113,4 +113,4 @@ where ou.stats != 'ACTIVE'
 
 ## Summary
 
-You can slice and dice Tailscale config data in many ways but this should give you a great starting point!
+Using data from the new Tailscale source plugin you can slice and dice your Tailscale data in many ways, but the examples in this post should give you a good starting point.
