--- a/website/pages/blog/cloudquery_tailscale.mdx
+++ b/website/pages/blog/cloudquery_tailscale.mdx
@@ -99,7 +99,7 @@ select count(*), os from tailscale_devices group by os;
 
 ### Find all devices of disabled Okta users
 
-Other cool things once you have Tailscale configuration in your database/datalake is that you can join and query it with other CloudQuery [source plugins](https://www.cloudquery.io/docs/plugins/sources/overview).
+Other cool things once you have Tailscale configuration in your database/datalake is that you can join and query it with data from other CloudQuery [source plugins](https://www.cloudquery.io/docs/plugins/sources/overview).
 
 For example, the following will show all devices of users that were deactivated on Okta:
 
