--- a/website/pages/blog/cloudquery_tailscale.mdx
+++ b/website/pages/blog/cloudquery_tailscale.mdx
@@ -31,7 +31,7 @@ Let's look at a few useful queries
 
 ## Configuration
 
-First let's quickly look at the source configuration so the plugin can authenticate with the new OAuth Client
+First, let's quickly look at the source configuration so the plugin. The example below syncs the `tailscale_devices` table to PostgreSQL, making use of the new OAuth client to authenticate.
 
 ```yaml copy
 kind: source
