--- a/website/pages/blog/cloudquery_tailscale.mdx
+++ b/website/pages/blog/cloudquery_tailscale.mdx
@@ -75,7 +75,7 @@ Find all devices with key expiry disabled
 select name, id, last_seen from tailscale_devices where key_expiry_disabled;
 ```
 
-```
+```text
     tailnet    |             name              |        id         |      last_seen      
 ---------------+-------------------------------+-------------------+---------------------
  cloudquery.io | example-name.tail341.ts.net   | 12345678082367896 | 2023-01-07 12:43:18
