--- a/website/pages/blog/cloudquery_tailscale.mdx
+++ b/website/pages/blog/cloudquery_tailscale.mdx
@@ -27,7 +27,7 @@ As part of its initial release, the Tailscale plugin supports pulling data for t
  - [`tailscale_dns_searchpaths`](https://github.com/cloudquery/cloudquery/blob/main/plugins/source/tailscale/docs/tables/tailscale_dns_searchpaths.md) table
  - [`tailscale_keys`](https://github.com/cloudquery/cloudquery/blob/main/plugins/source/tailscale/docs/tables/tailscale_keys.md) table
 
-Let's look at a few useful queries
+Let's look at a few useful queries.
 
 ## Configuration
 
