--- a/website/pages/blog/cloudquery_tailscale.mdx
+++ b/website/pages/blog/cloudquery_tailscale.mdx
@@ -13,7 +13,7 @@ import { BlogHeader } from "../../components/BlogHeader"
 
 ## Introduction
 
-Tailscale source plugin for CloudQuery is now officially maintained by Tailscale - Big thanks for the Tailscale team!.
+The Tailscale source plugin for CloudQuery is now officially maintained by Tailscale—big thanks to the Tailscale team!
 
 With the new Tailscale plugin you can now easily query Tailscale config and bring config data to your infrastructure/operational lake. 
 This way you can have all your infrastructure data in one place and correlate between different services.
