--- a/website/pages/docs/plugins/sources/salesforce/overview.mdx
+++ b/website/pages/docs/plugins/sources/salesforce/overview.mdx
@@ -34,7 +34,9 @@ spec:
     client_secret: "${SF_CLIENT_SECRET}"
     username: "${SF_USERNAME}"
     password: "${SF_PASSWORD}"
+    api_version: "v57.0"
     # Optional
+    # oauth_url: "https://login.salesforce.com/services/oauth2/token"
     # include_objects: ["Account", "Contact"]
     # exclude_objects: ["Account"]
 ```
@@ -63,6 +65,10 @@ This is the (nested) spec used by the Slack source plugin.
   
   This is the password of the above Salesforce user.
 
+- `api_version` (string array, optional):
+    
+  Mandatory API version to be used. Check [this article](https://help.salesforce.com/s/articleView?id=000386929&type=1) to identify the API version for your org.
+
 - `include_objects` (string array, optional):
 
   By default the plugin will sync all Salesforce objects. If you want to limit the objects that are synced you can specify the objects you want to sync in this array.
@@ -70,6 +76,10 @@ This is the (nested) spec used by the Slack source plugin.
 - `exclude_objects` (string array, optional):
     
   By default the plugin will sync all Salesforce objects. If you want to exclude some objects from being synced you can specify the objects you want to exclude in this array.
+
+- `oauth_url` (string array, optional):
+    
+  By default the plugin will use the standard production OAuth endpoint (https://login.salesforce.com/services/oauth2/token). Alternatively, sandbox OAuth endpoint can be configured (https://test.salesforce.com/services/oauth2/token)
 
 ## Example Queries
 
