--- a/website/pages/blog/search-through-cloud-infrastructure-with-elasticsearch.mdx
+++ b/website/pages/blog/search-through-cloud-infrastructure-with-elasticsearch.mdx
@@ -74,8 +74,8 @@ We can also build visualizations and dashboards using the data in Elasticsearch.
 
 ## Building an Historical View of Your Infrastructure
 
-One of the great things about Elasticsearch is that it is designed to be used with time series data, and therefore a final thing we wanted to note in this post is the ability to view historical snapshots of your infrastructure from Elasticsearch. The CloudQuery Elasticsearch destination currently supports three write modes: `overwrite`, `overwrite-delete-stale` (the default) and `append`. You can read more about these in the [plugin documentation](/docs/plugins/destinations/elasticsearch/overview), but in short, when using `append` mode, CloudQuery will never delete data, so you can build an historical view of your infrastructure over time. For example, by running a sync in `append` mode every day, you can build a visualization that shows the number of EC2 instances over time, or more generally track how your organization's security posture is (hopefully!) improving over time.
+One of the great things about Elasticsearch is that it is designed to be used with time series data, and therefore a final thing we wanted to note in this post is the ability to view historical snapshots of your infrastructure from Elasticsearch. The CloudQuery Elasticsearch destination currently supports three write modes: `overwrite`, `overwrite-delete-stale` (the default) and `append`. You can read more about these in the [plugin documentation](/docs/plugins/destinations/elasticsearch/overview), but in short, when using `append` mode, CloudQuery will never delete data, so you can build an historical view of your infrastructure over time. For example, by running a sync in `append` mode every day, you can build a visualization that shows the number of EC2 instances over time, or more generally track how (or whether!) your organization's security posture is improving over time.
 
 ## Conclusion
 
-In this article we showed you how to get started with the CloudQuery Elasticsearch destination. We also showed you a few examples of the things you can do with the data in Elasticsearch in combination with the AWS source plugin, including searching through your cloud infrastructure, building visualizations and dashboards, and building an historical view of your infrastructure. But don't think that it's limited to AWS! The Elasticsearch destination works with all [CloudQuery source plugins](/docs/plugins/sources/overview), so you can search through your Azure, GCP, Kubernetes, or even Marketing and FinOps data as well. We hope you find this new destination useful, and we look forward to seeing what you build with it! If you have any feedback on the Elasticsearch destination, or any other part of CloudQuery, please let us know on [Discord](https://www.cloudquery.io/discord) or by opening an [issue on GitHub](https://github.com/cloudquery/cloudquery). We look forward to seeing how you use this!
+In this article we showed you how to get started with the new CloudQuery Elasticsearch destination, now available in Preview. We also showed you a few examples of the things you can do with the data in Elasticsearch in combination with the AWS source plugin, including searching through your cloud infrastructure, building visualizations and dashboards, and building an historical view of your infrastructure. But don't think that it's limited to AWS! The Elasticsearch destination works with all [CloudQuery source plugins](/docs/plugins/sources/overview), so you can search through your Azure, GCP, Kubernetes, or even Marketing and FinOps data as well. We hope you find this new destination useful, and we look forward to seeing what you build with it! If you have any feedback on the Elasticsearch destination, or any other part of CloudQuery, please let us know on [Discord](https://www.cloudquery.io/discord) or by opening an [issue on GitHub](https://github.com/cloudquery/cloudquery). We look forward to seeing how you use this!
