--- a/website/pages/blog/search-through-cloud-infrastructure-with-elasticsearch.mdx
+++ b/website/pages/blog/search-through-cloud-infrastructure-with-elasticsearch.mdx
@@ -78,4 +78,4 @@ One of the great things about Elasticsearch is that it is designed to be used wi
 
 ## Conclusion
 
-In this article we showed you how to get started with the new CloudQuery Elasticsearch destination, now available in Preview. We also showed you a few examples of the things you can do with the data in Elasticsearch in combination with the AWS source plugin, including searching through your cloud infrastructure, building visualizations and dashboards, and building a historical view of your infrastructure. But don't think that it's limited to AWS! The Elasticsearch destination works with all [CloudQuery source plugins](/docs/plugins/sources/overview), so you can search through your Azure, GCP, Kubernetes, or even Marketing and FinOps data as well. We hope you find this new destination useful, and we look forward to seeing what you build with it! If you have any feedback on the Elasticsearch destination, or any other part of CloudQuery, please let us know on [Discord](https://www.cloudquery.io/discord) or by opening an [issue on GitHub](https://github.com/cloudquery/cloudquery). We look forward to seeing how you use this!
+In this article we showed you how to get started with the new CloudQuery Elasticsearch destination, now available in Preview. We also showed you a few examples of the things you can do with the data in Elasticsearch in combination with the AWS source plugin, including searching through your cloud infrastructure, building visualizations and dashboards, and building a historical view of your infrastructure. But don't think that it's limited to AWS! The Elasticsearch destination works with all [CloudQuery source plugins](/docs/plugins/sources/overview), so you can search through your Azure, GCP, Kubernetes, or even Marketing and FinOps data as well. We hope you find this new destination useful, and we look forward to seeing what you build with it! If you have any feedback on the Elasticsearch destination, or any other part of CloudQuery, please let us know on [Discord](https://www.cloudquery.io/discord) or by opening an [issue on GitHub](https://github.com/cloudquery/cloudquery). 🚀
