--- a/website/pages/docs/plugins/sources/postgresql/overview.mdx
+++ b/website/pages/docs/plugins/sources/postgresql/overview.mdx
@@ -1,7 +1,7 @@
 ---
 name: PostgreSQL
 ---
-# Postgres Source Plugin
+# PostgreSQL Source Plugin
 
 import { getLatestVersion } from "../../../../../utils/versions";
 import { Badge } from "../../../../../components/Badge";
