--- a/website/pages/docs/plugins/sources/postgresql/overview.mdx
+++ b/website/pages/docs/plugins/sources/postgresql/overview.mdx
@@ -9,7 +9,7 @@ import { Callout } from 'nextra-theme-docs'
 
 <Badge text={"Latest: " + getLatestVersion("source", "postgresql")}/>
 
-The CloudQuery Postgres plugin syncs your Postgres database to any of the supported CloudQuery destinations (e.g. PostgreSQL, Snowflake, BigQuery, …).
+The CloudQuery PostgreSQL plugin syncs your PostgreSQL database to any of the supported CloudQuery destinations (e.g. PostgreSQL, Snowflake, BigQuery, …).
 This plugins also supports CDC via Postgres logical replication which enables keeping your Postgres up to date with any destination just by subscribing to changes.
 
 Supported database versions:
