--- a/website/pages/docs/plugins/sources/postgresql/overview.mdx
+++ b/website/pages/docs/plugins/sources/postgresql/overview.mdx
@@ -18,7 +18,7 @@ Supported database versions:
 
 ### Example
 
-This example configures a Postgresql source, located at `localhost:5432`. The (top level) spec section is described in the [Source Spec Reference](/docs/reference/source-spec).
+This example configures a PostgreSQL source, located at `localhost:5432`. The (top level) spec section is described in the [Source Spec Reference](/docs/reference/source-spec).
 
 ```yaml copy
 kind: source
