add section about error messages

--- a/website/pages/blog/finding-outdated-aws-iam-policy-version-elements.mdx
+++ b/website/pages/blog/finding-outdated-aws-iam-policy-version-elements.mdx
@@ -71,7 +71,21 @@ https://docs.aws.amazon.com/IAM/latest/UserGuide/introduction_access-management.
 
 ## Finding Identity Policies with CloudQuery
 
+AWS has controls that block the creation of IAM Managed Policies with 
+legacy policy versions.  However, inline policies still can be created 
+with legacy policy versions.
+
+
+
+
+* IAM Customer Managed Policies
+* Inline IAM Group policies
+* Inline IAM User policies
+* Inline IAM Role policies
+
 ## Finding Resource-based Policies with CloudQuery
+
+
 
 ## Conclusion
 
