--- a/website/pages/docs/plugins/sources/postgresql/overview.mdx
+++ b/website/pages/docs/plugins/sources/postgresql/overview.mdx
@@ -14,7 +14,8 @@ This plugins also supports CDC via PostgreSQL logical replication which enables 
 
 Supported database versions:
 
-- PostgreSQL >= v11
+- PostgreSQL >= v11 (Needed for CDC, logical replication).
+- PostgreSQL >= v10 (If no need for CDC).
 
 ### Example
 
